# tmp/openapi/hello.swagger.json
@@ -20,15 +20,15 @@
     "application/json"
   ],
   "paths": {
-    "/api/users/{id}": {
+    "/api/hello": {
       "get": {
-        "summary": "GetUser",
-        "operationId": "HelloService_GetUser",
+        "summary": "Hello",
+        "operationId": "HelloService_Hello",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/helloUserResponse"
+              "$ref": "#/definitions/helloHelloResponse"
             }
           },
           "default": {
@@ -40,14 +40,7 @@
         },
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "name",
+            "name": "say",
             "in": "query",
             "required": false,
             "type": "string"
@@ -60,14 +53,10 @@
     }
   },
   "definitions": {
-    "helloUserResponse": {
+    "helloHelloResponse": {
       "type": "object",
       "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "name": {
+        "echo": {
           "type": "string"
         }
       }
